One more missed capitalization

--- a/Config/configPage.html
+++ b/Config/configPage.html
@@ -21,10 +21,10 @@
                             </div>
                         </li>
                         <li>
-                            <label for="txtLdapBaseDN">
+                            <label for="txtLdapBaseDn">
                                 LDAP Base DN for searches:
                             </label>
-                            <input type="text" id="txtLdapBaseDN" name="txtLdapBaseDN" />
+                            <input type="text" id="txtLdapBaseDn" name="txtLdapBaseDn" />
                             <div class="fieldDescription">
                                 The base DN structure for your LDAP query
                             </div>
