--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -56,7 +56,7 @@
                                 <div class="fieldDescription">A user to use for LDAP queries.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
-                                <input is="emby-input" type="text" id="txtLdapBindPassword" label="LDAP Bind User Password:" />
+                                <input is="emby-input" type="password" id="txtLdapBindPassword" label="LDAP Bind User Password:" />
                                 <div class="fieldDescription">Your LDAP query user password.</div>
                             </div>
                             <div class="checkboxContainer checkboxContainer-withDescription">
