--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -12,7 +12,7 @@
                     <div class="verticalSection verticalSection-extrabottompadding">
                         <div class="sectionTitleContainer flex align-items-center">
                             <h2 class="sectionTitle">LDAP Settings:</h2>
-                            <a is="emby-linkbutton" class="raised button-alt headerHelpButton" target="_blank" href="https://github.com/jellyfin/jellyfin-plugin-ldapauth">${Help}</a>
+                            <a is="emby-button" class="raised button-alt headerHelpButton" target="_blank" href="https://github.com/jellyfin/jellyfin-plugin-ldapauth">${Help}</a>
                         </div>
                         <p><i>Note:</i> Making changes to this configuration requires a restart of Jellyfin.</p>
                         <div class="verticalSection verticalSection-extrabottompadding">
