adjust form port field type to number
adds a basic html input validation to input field by making sure the field is a number.

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -32,7 +32,7 @@
                                 <div class="fieldDescription">The base DN structure for your LDAP query.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
-                                <input is="emby-input" type="text" id="txtLdapPort" label="LDAP Port:" />
+                                <input is="emby-input" type="number" id="txtLdapPort" label="LDAP Port:" />
                                 <div class="fieldDescription">The port to communicate with LDAP on.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
