--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
                                 <input is="emby-input" type="text" id="txtLdapSearchAttributes" label="LDAP Attributes:" />
-                                <div class="fieldDescription">A comma-separated list of LDAP attributes to compare entered usernames to.</div>
+                                <div class="fieldDescription">A comma-separated list of LDAP attributes to compare with entered usernames.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
                                 <input is="emby-input" type="text" id="txtLdapUsernameAttribute" label="LDAP Name Attribute:" />
