Fix password display

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -70,11 +70,11 @@
                                 <div class="fieldDescription">A bind user for LDAP search queries, required if your LDAP doesn't support anonymous bind.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
-                                <input is="emby-input" type="text" id="txtLdapBindPassword" label="LDAP Bind User Password:" />
+                                <input is="emby-input" type="password" id="txtLdapBindPassword" label="LDAP Bind User Password:" />
                                 <div class="fieldDescription">The password for the LDAP search query user.</div>
                             </div>
                             <div class="inputContainer fldExternalAddressFilter">
-                                <input is="emby-input" type="password" id="txtLdapEasyPasswordAttr" label="LDAP Easy Password Attribute:" />
+                                <input is="emby-input" type="text" id="txtLdapEasyPasswordAttr" label="LDAP Easy Password Attribute:" />
                                 <div class="fieldDescription">The attribute to store the Easy Password in.</div>
                             </div>
                             <div class="checkboxContainer checkboxContainer-withDescription">
