--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -73,6 +73,10 @@
                                 <input is="emby-input" type="password" id="txtLdapBindPassword" label="LDAP Bind User Password:" />
                                 <div class="fieldDescription">The password for the LDAP search query user.</div>
                             </div>
+                            <div class="inputContainer fldExternalAddressFilter">
+                                <input is="emby-input" type="text" id="txtLdapEasyPasswordAttr" label="LDAP Easy Password Attribute:" />
+                                <div class="fieldDescription">The attribute to store the Easy Password in.</div>
+                            </div>
                             <div class="checkboxContainer checkboxContainer-withDescription">
                                 <label>
                                     <input type="checkbox" is="emby-checkbox" id="chkEnableUserCreation" />
@@ -121,6 +125,7 @@
                     $('#txtLdapAdminFilter', page).val(config.LdapAdminFilter || "(enabledService=JellyfinAdministrator");
                     $('#txtLdapBindUser', page).val(config.LdapBindUser || "CN=BindUser,DC=contoso,DC=com");
                     $('#txtLdapBindPassword', page).val(config.LdapBindPassword || "");
+                    $('#txtLdapEasyPasswordAttr', page).val(config.EasyPasswordField || "");
                     $("#chkEnableUserCreation", page).checked(config.CreateUsersFromLdap);
                     Dashboard.hideLoadingMsg();
                 });
@@ -144,6 +149,7 @@
                     config.LdapAdminFilter = $('#txtLdapAdminFilter', form).val();
                     config.LdapBindUser = $('#txtLdapBindUser', form).val();
                     config.LdapBindPassword = $('#txtLdapBindPassword', form).val();
+                    config.EasyPasswordField = $('#txtLdapEasyPasswordAttr', form).val();
                     config.CreateUsersFromLdap = $("#chkEnableUserCreation", form).checked();
                     config.LdapPort = parseInt($("#txtLdapPort", form).val() || "389");
 
